Adding navigation id to trace of navigationStart and firstContentfulPaint

I have confirmed with the test case in https://github.com/catapult-project/catapult/issues/4490
that the navigation id in document loader is the correct id.  Adding an id to the
document itself is not the same between navigation and fcp.

Bug: 850258,catapult:4490
Change-Id: I4028bcb13d90a5a1a765890fe02e346d496fab7a
Reviewed-on: https://chromium-review.googlesource.com/1249533
Commit-Queue: Emily Hanley <eyaich@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595842}